<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_nav_bar_home"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:iconTint="?attr/navigationBarTabColor"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_nav_bar_search"
        android:icon="@drawable/ic_search"
        android:iconTint="?attr/navigationBarTabColor"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_nav_bar_favourites"
        android:icon="@drawable/ic_fav"
        android:iconTint="?attr/navigationBarTabColor"
        android:title="@string/menu_favourites" />
</menu>