<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/manga_item_padding_start"
    android:paddingEnd="@dimen/manga_item_padding_start"
    tools:context=".MangaFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mangaList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none" />
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/noManga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/empty_manga_list_manga_fragment"
        android:textAppearance="@style/TextAppearance.AnimeShrineTheme.Body1"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>
