<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="thumbnail">thumbnail</string>
    <string name="empty_manga_list_manga_fragment">Your manga will appear here</string>
    <string name="remove">Remove</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="retry">Retry</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="search">Search</string>
</resources>