...
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/windowBackground"
                android:elevation="0dp"
                android:orientation="horizontal"
                app:layout_scrollFlags="scroll|enterAlways">
...
                    android:layout_height="wrap_content"
                    android:checked="@{fav.MState}"
                    android:onClick="@{() -> fav.selectAnimePage()}"
                    android:text="@string/anime" />

                <RadioButton
                    android:id="@+id/radio_btn_manga"
                    style="@style/spotifyHeaderRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{!fav.MState}"
                    android:onClick="@{() -> fav.selectMangaPage()}"
                    android:text="@string/manga" />
...
